--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
   </div>
   <div class="container-wrapper container-content template-land_start zero-padding">
     <div class="container">
+      <h1 class="headline">Pflegeheime in Berlin</h1>
         <div id="map"></div>
     </div>
   </div>
