--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <title></title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="icon" type="image/svg+xml" href="/images/pin.svg"/>
         <link rel="stylesheet" href="css/bde-index.css">
         <link rel="stylesheet" href="css/bde-bootstrap.css">
         <link rel="stylesheet" href="css/vendor.css">
